added main heading, article and two paragraphs tags

--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
         <title>All About Rob Chant</title>
     </head>
     <body>
-
+        <h1>Rob Chant</h1>
+        <article> 
+            <h2>About Me</h2> <br> 
+            <p>50 words</p> <br>
+            <p>50 more words</p>
+        </article>
     </body>
 
 
