added text to two about me paragraphs

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
         <h1>Rob Chant</h1>
         <article> 
             <h2>About Me</h2> <br> 
-            <p>50 words</p> <br>
-            <p>50 more words</p>
+            <p>Hi y’all! My name is Rob Chant and I am a student in my first year of Algonquin College’s Interactive Media Design program. I’ve studied at the College before as well – in 2012 I received a certificate for completing the General Arts and Science – Introduction to Fine Arts. From there, I went on to the University of Ottawa, where I received a Bachelor of Fine Arts specializing in painting and drawing.</p> <br>
+            <p>Outside of school I have worked in retail management for most of my adult life. I’m currently a Floor Leader for Lush Cosmetics, and love working for the brand. I live with my partner and dog in Vanier, and in my spare time I love to practice yoga. I’m also super into astrology, tarot reading, and love to curl up with a good book!</p>
         </article>
     </body>
 
