added extra paragraph, blockquote and citation

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
              specializing in painting and drawing. I definitely like to get 
              creative!
             </p>
+
             <p>Outside of school I have worked in retail management for 
             most of my adult life. I’m currently a Floor Leader for Lush 
             Cosmetics, and love working for the brand. I live with my partner 
@@ -27,8 +28,10 @@
             spent a lot of time carving my own linocut prints lately.
             </p>
         </article>
+        <p>... and in the infamous words of Rupaul:</p>
         <blockquote>
-            
+            "If you can't love yourself, how in the hell are you gonna 
+            love somebody else?" - <cite>Rupaul Charles</cite>
         </blockquote>
     </body>
 
