added <em> <sup> and <abbr> tags required

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>All About Rob Chant</title>
     </head>
     <body>
-        <h1>Rob Chant</h1>
+        <h1>Rob Chant, <abbr title="Bachelor of Fine Arts">BFA</abbr></h1>
         <article> 
             <h2>About Me</h2> 
             <p>Hi y’all! My name is Rob Chant and I am a student in my first
@@ -15,7 +15,7 @@
              a certificate for completing the General Arts and Science – 
              Introduction to Fine Arts program. From there, I went on to the 
              University of Ottawa, where I received a Bachelor of Fine Arts 
-             specializing in painting and drawing. I definitely like to get 
+             specializing in painting and drawing. I <em>definitely</em> like to get 
              creative!
             </p>
 
@@ -28,7 +28,7 @@
             spent a lot of time carving my own linocut prints lately.
             </p>
         </article>
-        <p>... and in the infamous words of Rupaul:</p>
+        <p>... and in the <sup>infamous</sup> words of Rupaul:</p>
         <blockquote>
             "If you can't love yourself, how in the hell are you gonna 
             love somebody else?" - <cite>Rupaul Charles</cite>
