edited text in third paragraph

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             spent a lot of time carving my own linocut prints lately.
             </p>
         </article>
-        <p>... and in the <sup>infamous</sup> words of Rupaul:</p>
+        <p>... and in the <sup>infamous</sup> words of a very wise woman:</p>
         <blockquote>
             "If you can't love yourself, how in the hell are you gonna 
             love somebody else?" - <cite>Rupaul Charles</cite>
