--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
             "If you can't love yourself, how in the hell are you gonna 
             love somebody else?" - <cite>Rupaul Charles</cite>
         </blockquote>
-        <footer> <small>&copy; Copyright 2018, Rob Chant</small> </footer> 
+        <footer> 
+            <small>&copy; Copyright 2018, Rob Chant</small> 
+        </footer> 
     </body>
 
 
