added image + alt and height specs

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <h1>Rob Chant, <abbr title="Bachelor of Fine Arts">BFA</abbr></h1>
         <article> 
             <h2>About Me</h2> 
+            <img src="images/IMG_0919.jpeg" alt="Photo of Rob" height= "300px">
             <p>Hi y’all! My name is Rob Chant and I am a student in my first
              year of Algonquin College’s Interactive Media Design program. 
              I’ve studied at the College before as well – in 2012 I received 
