added hobbies unordered list in new article

--- a/index.html
+++ b/index.html
@@ -29,6 +29,14 @@
             spent a lot of time carving my own linocut prints lately.
             </p>
         </article>
+        <article>
+            <h2>Other hobbies include:</h2>
+            <ul>
+                <li>embroidery</li>
+                <li>painting</li>
+                <li>dreaming of a post COVID vacation</li>
+            </ul>
+        </article>
         <p>... and in the <sup>infamous</sup> words of a very wise woman:</p>
         <blockquote>
             "If you can't love yourself, how in the hell are you gonna 
