--- a/notes.html
+++ b/notes.html
@@ -1,1 +1,22 @@
-
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <!-- Document Information  -->
+        <meta charset="UTF-8">
+        <title>Notes</title>
+    </head>
+    <body>
+        <h1> Some HTML Tags I know: </h1>
+        <dl>
+            <dt>&lt;a&gt;</dt>
+            <dd>Anchor: defines a hyperlink, used to link from one page to another.</dd>
+            <dt>&lt;article&gt;</dt>
+            <dd>Article:Specifies independent, self-contained articles on the page.</dd>
+            <dt>&lt;body&gt;</dt>
+            <dd>Body: Define's the document or page's body.</dd>
+            <dt>&lt;dl&gt;</dt>
+            <dd>Descriptive List: A list of items, with descriptions... kind of like this one!</dd>
+            <dt>&lt;img&gt;</dt>
+            <dd>Image: embeds an image in an HTML page.</dd>
+        </dl>>
+    </body>
