added nav to home page

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
         <title>All About Rob Chant</title>
     </head>
     <body>
+        <nav>
+            <a href="index.html" class="inactiveLink">Home</a>
+            <a href="notes.html">Notes</a>
+        </nav>
         <h1>Rob Chant, <abbr title="Bachelor of Fine Arts">BFA</abbr></h1>
         <article> 
             <h2>About Me</h2> 
