--- a/notes.html
+++ b/notes.html
@@ -20,3 +20,6 @@
             <dd>Image: embeds an image in an HTML page.</dd>
         </dl>
     </body>
+    <footer> 
+        <small>&copy; Copyright 2021, Rob Chant</small> 
+    </footer> 
