added nav to notes

--- a/notes.html
+++ b/notes.html
@@ -6,6 +6,10 @@
         <title>Notes</title>
     </head>
     <body>
+        <nav>
+            <a href="index.html" class="inactiveLink">Home</a>
+            <a href="notes.html">Notes</a>
+        </nav>
         <h1> Some HTML Tags I know: </h1>
         <dl>
             <dt>&lt;a&gt;</dt>
