removed inactive link class from nav

--- a/notes.html
+++ b/notes.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <nav>
-            <a href="index.html" class="inactiveLink">Home</a>
+            <a href="index.html">Home</a>
             <a href="notes.html">Notes</a>
         </nav>
         <h1> Some HTML Tags I know: </h1>
