added header main footer, styled body text, header footer and title, added box shadow to img

--- a/index.html
+++ b/index.html
@@ -10,42 +10,46 @@
             <a href="index.html">Home</a>
             <a href="notes.html">Notes</a>
         </nav>
-        <h1>Rob Chant, <abbr title="Bachelor of Fine Arts">BFA</abbr></h1>
-        <article> 
-            <h2>About Me</h2> 
-            <img src="images/IMG_0919.jpeg" alt="Photo of Rob" height= "300">
-            <p>Hi y’all! My name is Rob Chant and I am a student in my first
-             year of Algonquin College’s Interactive Media Design program. 
-             I’ve studied at the College before as well – in 2012 I received 
-             a certificate for completing the General Arts and Science – 
-             Introduction to Fine Arts program. From there, I went on to the 
-             University of Ottawa, where I received a Bachelor of Fine Arts 
-             specializing in painting and drawing. I <em>definitely</em> like to get 
-             creative!
-            </p>
+        <header>
+            <h1 class="site-title">Rob Chant, <abbr title="Bachelor of Fine Arts">BFA</abbr></h1>
+        </header>
+        <main>
+            <article> 
+                <h2>About Me</h2> 
+                <img id="my-image" src="images/IMG_0919.jpeg" alt="Photo of Rob" height= "300">
+                <p>Hi y’all! My name is Rob Chant and I am a student in my first
+                year of Algonquin College’s Interactive Media Design program. 
+                I’ve studied at the College before as well – in 2012 I received 
+                a certificate for completing the General Arts and Science – 
+                Introduction to Fine Arts program. From there, I went on to the 
+                University of Ottawa, where I received a Bachelor of Fine Arts 
+                specializing in painting and drawing. I <em>definitely</em> like to get 
+                creative!
+                </p>
 
-            <p>Outside of school I have worked in retail management for 
-            most of my adult life. I’m currently a Floor Leader for Lush 
-            Cosmetics, and love working for the brand. I live with my partner 
-            and dog in Vanier, and in my spare time I love to practice yoga. 
-            I’m also super into astrology: I'm a Leo sun, Virgo moon and 
-            Capricorn rising. Otherwise, I enjoy tarot reading, and have 
-            spent a lot of time carving my own linocut prints lately.
-            </p>
-        </article>
-        <article>
-            <h2>Other hobbies include:</h2>
-            <ul>
-                <li>embroidery</li>
-                <li>painting</li>
-                <li>dreaming of a post COVID vacation</li>
-            </ul>
-        </article>
-        <p>... and in the <sup>infamous</sup> words of a very wise woman:</p>
-        <blockquote>
+                <p>Outside of school I have worked in retail management for 
+                most of my adult life. I’m currently a Floor Leader for Lush 
+                Cosmetics, and love working for the brand. I live with my partner 
+                and dog in Vanier, and in my spare time I love to practice yoga. 
+                I’m also super into astrology: I'm a Leo sun, Virgo moon and 
+                Capricorn rising. Otherwise, I enjoy tarot reading, and have 
+                spent a lot of time carving my own linocut prints lately.
+                </p>
+            </article>
+            <article>
+                <h2>Other hobbies include:</h2>
+                <ul>
+                    <li>embroidery</li>
+                    <li>painting</li>
+                    <li>dreaming of a post COVID vacation</li>
+                </ul>
+            </article>
+            <p>... and in the <sup>infamous</sup> words of a very wise woman:</p>
+            <blockquote>
             "If you can't love yourself, how in the hell are you gonna 
             love somebody else?" - <cite>Rupaul Charles</cite>
-        </blockquote>
+            </blockquote>
+        </main>
         <footer> 
             <small>&copy; Copyright 2021, Rob Chant</small> 
         </footer> 
