--- a/notes.html
+++ b/notes.html
@@ -10,19 +10,23 @@
             <a href="index.html">Home</a>
             <a href="notes.html">Notes</a>
         </nav>
-        <h1> Some HTML Tags I know: </h1>
-        <dl>
-            <dt>&lt;a&gt;</dt>
-            <dd>Anchor: defines a hyperlink, used to link from one page to another.</dd>
-            <dt>&lt;article&gt;</dt>
-            <dd>Article:Specifies independent, self-contained articles on the page.</dd>
-            <dt>&lt;body&gt;</dt>
-            <dd>Body: Define's the document or page's body.</dd>
-            <dt>&lt;dl&gt;</dt>
-            <dd>Descriptive List: A list of items, with descriptions... kind of like this one!</dd>
-            <dt>&lt;img&gt;</dt>
-            <dd>Image: embeds an image in an HTML page.</dd>
-        </dl>
+        <header>
+            <h1 class="site-title"> Some HTML Tags I know: </h1>
+        </header>
+        <main>
+            <dl>
+                <dt>&lt;a&gt;</dt>
+                <dd>Anchor: defines a hyperlink, used to link from one page to another.</dd>
+                <dt>&lt;article&gt;</dt>
+                <dd>Article:Specifies independent, self-contained articles on the page.</dd>
+                <dt>&lt;body&gt;</dt>
+                <dd>Body: Define's the document or page's body.</dd>
+                <dt>&lt;dl&gt;</dt>
+                <dd>Descriptive List: A list of items, with descriptions... kind of like this one!</dd>
+                <dt>&lt;img&gt;</dt>
+                <dd>Image: embeds an image in an HTML page.</dd>
+            </dl>
+        </main>
         <footer> 
             <small>&copy; Copyright 2021, Rob Chant</small> 
         </footer> 
