--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <!-- Document Information  -->
         <meta charset="UTF-8">
         <title>All About Rob Chant</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <nav>
