--- a/notes.html
+++ b/notes.html
@@ -4,6 +4,7 @@
         <!-- Document Information  -->
         <meta charset="UTF-8">
         <title>Notes</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <nav>
