finished style project from bulleted list to nav styling

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </article>
             <article>
                 <h2>Other hobbies include:</h2>
-                <ul>
+                <ul class="a">
                     <li>embroidery</li>
                     <li>painting</li>
                     <li>dreaming of a post COVID vacation</li>
