--- a/notes.html
+++ b/notes.html
@@ -15,7 +15,7 @@
             <h1 class="site-title"> Some HTML Tags I know: </h1>
         </header>
         <main>
-            <dl>
+            <dl class="b">
                 <dt>&lt;a&gt;</dt>
                 <dd>Anchor: defines a hyperlink, used to link from one page to another.</dd>
                 <dt>&lt;article&gt;</dt>
